# very-test

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  (+2 more)
autopedia/: __main__.py  cli.py  config.py  llm_client.py  models.py  planner.py  reporting.py  requests.py  research.py  search.py  site.py  utils.py  writer.py
autopedia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: site-state.json
docs/: index.md
reports/: 20260410T011910Z-quantum-error-correction.md  20260410T021856Z-mrna-vaccine-manufacturing.md  20260410T023009Z-direct-air-capture.md  20260410T024323Z-advanced-lithography.md  20260410T025348Z-crispr-therapeutics.md  20260410T030333Z-grid-scale-battery-safety.md  20260410T030838Z-protein-structure-prediction.md  20260410T031641Z-geothermal-closed-loop-systems.md  20260410T032205Z-synthetic-aperture-radar-satellites.md  20260410T032928Z-water-desalination-membranes.md  20260410T033525Z-quantum-error-correction-applications-and-constraints.md  20260410T034328Z-quantum-error-correction-applications-and-constraints.md  20260410T034954Z-quantum-error-correction-applications-and-constraints.md  20260410T035901Z-quantum-error-correction-applications-and-constraints.md  20260410T040620Z-quantum-error-correction-applications-and-constraints.md  20260410T041409Z-quantum-error-correction-applications-and-constraints.md  20260410T042057Z-quantum-error-correction-applications-and-constraints.md  20260410T042658Z-quantum-error-correction-applications-and-constraints.md  (+1622 more)
(+17 files in other folders)
